fix selected card border in dark mode
and a couple other visual tweaks

--- a/tichu/public/tichu.css
+++ b/tichu/public/tichu.css
@@ -297,7 +297,11 @@ body.dark {
 }
 
 .dark .tichu-card, .dark .pile {
-    border-color: #303030;
+    border-color: #343434;
+}
+
+.dark .tichu-card.selected {
+    border-color: #c8981e;
 }
 
 .dark .special-card {
